--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,21 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-registry-prometheus</artifactId>
+            <version>1.11.5</version>
+        </dependency>
+        <dependency>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-core</artifactId>
+            <version>1.11.5</version>
+</dependency>
     </dependencies>
 
     <build>
@@ -79,5 +94,13 @@
             </plugin>
         </plugins>
     </build>
+
+    <distributionManagement>
+		<repository>
+			<id>deploymentRepo</id>
+			<name>Nexus Repo TPAchat</name>
+			<url>http://localhost:8081/repository/maven-releases/</url>
+		</repository>
+	</distributionManagement>
 
 </project>
